k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-app
  namespace: orders
  labels:
    app: orders-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-app
  template:
    metadata:
      labels:
        app: orders-app
    spec:
      containers:
        - name: orders
          # Use the GHCR image pushed in Part 2
          image: ghcr.io/soumya-s-goud/arculus-devops-challenge:sha-0b3e0e9
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
          securityContext:
            runAsUser: 1000
            runAsNonRoot: true
