k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: orders
  labels:
    app: orders-app
spec:
  selector:
    app: orders-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: http
  type: ClusterIP
